<resources>
    <string name="app_name">Sync</string>
    <string name="AppName">Sync</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_verify_password">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="Connect_With_LinkedIn">New Account using LinkedIn</string>
    <string name="New_Account">New Account</string>
    <string name="Login_Existing_Account">Already have an account?</string>
    <string name="New_Account_Basic_Info_Title">New Account</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Verify_Password">Re-Enter Password</string>
    <string name="Next_Button">Next</string>
    <string name="New_Account_Job_Info_Title">Tell us about you</string>
    <string name="Company_Text_Hint">Company</string>
    <string name="Position_Text_Hint">Position</string>
    <string name="Industry_Text_Hint">Industry</string>
    <string name="Done_Button">Done</string>
    <string name="Upload_Photo">Upload your photo</string>
    <string name="Register_New_Account_Progress_Dialog">Creating account&#8230;</string>
    <string name="Register_New_Account_Success">Account created</string>
    <string name="Register_New_Account_Failure">Account creation failed</string>
    <string name="retrieve_linkedin_basic_info_successful">Retrieve LinkedIn basic info successful"</string>
    <string name="retrieve_linkedin_job_info_successful">Retrieve LinkedIn job info successful"</string>
    <string name="retrieve_linkedin_profile_image_successful">Retrieve LinkedIn profile image successful"</string>
    <string name="title_activity_login_form">Log in</string>
    <string name="title_activity_new_account_basic_info">New Account</string>
    <string name="title_activity_new_account_job_info">Tell us about you</string>
    <string name="title_activity_new_account_photo">One last step</string>
    <string name="title_activity_maps">Map</string>
    <string name="Login">Login</string>
    <string name="InfoWindowName">Name:</string>
    <string name="InfoWindowInfo">More info&#8230;</string>
    <string name="Connect_Button">Connect</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Map_Title">Map</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Sync_Up">SyncUp</string>
    <string name="Create_Event">Create Event</string>
    <string name="View_Events">View Events</string>
    <string name="View_Connections">View Connections</string>
    <string name="Settings_Menu">Settings</string>
    <string name="Log_Out">Logout</string>
    <string name="connections_text">connections</string>
    <string name="connection_text">connection</string>
    <string name="connections_action_bar_title">Connections</string>
    <string name="logout_confirmation_text">Are you sure you want to logout?</string>
    <string name="logout_action_bar_title">Logout</string>
    <string name="settings_map_header">Map personalization</string>
    <string name="settings_event_pin_color_text">Event pin color</string>
    <string name="settings_user_pin_color_text">Person pin color</string>
    <string name="settings_loc_refresh_text">Location refresh rate</string>
    <string name="settings_time_refresh_text">Time (minutes)</string>
    <string name="settings_dis_refresh_text">Distance (meters)</string>
    <string name="settings_zoom_text">Default zoom level</string>
    <string name="settings_action_bar_title">Settings</string>
    <string-array name="pin_color_array">
        <item>Azure</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Rose</item>
        <item>Violet</item>
        <item>Yellow</item>
    </string-array>
    <string name="commit_button">Commit</string>
    <string name="nav_menu_notification_text">Notifications</string>
    <string name="sync_icon">sync_icon</string>
    <string name="sync_title_text">SYNC</string>
    <string name="your_privacy_matters">Your Privacy Matters</string>
    <string name="privacy_policy_intro">Sync strives to connect people with local professionals to create meaningful and impactful connections that supports their career goals. In line with that mission, is being transparent about what data we collect and how it is being used. By using this service, you consent to Sync using your data in compliance with this privacy policy.</string>
    <string name="information_we_collect">Information We Collect</string>
    <string name="privacy_policy_sync_account">You provide data to create a Sync account</string>
    <string name="privacy_policy_account_text">To create an account manually you provide data including your name, email address, password, job position, company name, industry, and profile image.</string>
    <string name="privacy_policy_linkedin_account_integration">You provide data from your LinkedIn profile to create an account through LinkedIn account integration</string>
    <string name="privacy_policy_linkedin_integration_text">To create an account through LinkedIn account integration, you provide data found in your profile including your name, email address, job position, company name, industry, and profile image.</string>
    <string name="permissions_we_request">Permissions We Request</string>
    <string name="your_location">Your Location</string>
    <string name="privacy_policy_location">Sync receives location data from your device as the foundation of the functionality of the application. Location is used to find other local users and events. This location data can be protected through obfuscation that modifies your precise location and stores that for other users to see. The amount of privacy your location data has is modifiable by you.</string>
    <string name="your_gallery">Your Gallery</string>
    <string name="privacy_policy_gallery">Sync uses your gallery to select images for your profile and created events. The images are stored securely in Firebase Storage</string>
    <string name="your_devices_near_field_communication_technology">Your Devices Near Field Communication Technology</string>
    <string name="privacy_policy_NFC">Sync uses Near Field Communication (NFC) technology to enhance your in-person networking experiences by providing rapid, near-instantaneous data transfers. Sync currently uses NFC for establishing connections between you and other people when you trigger the SyncUp feature. This feature is not fundamental to the utility of the application and connections can be formed without using NFC.</string>
    <string name="third_parties_we_use">Third-Parties We Use</string>
    <string name="google_play_services">Google Play Services</string>
    <string name="privacy_policy_google_play_services">Google Play services is provided by Google and forms the foundation of Sync. Importantly it is used to find the location of the device and for the integration of the Google Maps widget. See Google Play services privacy policy here: https://policies.google.com/privacy?hl=en</string>
    <string name="firebase_authentication">Firebase Authentication</string>
    <string name="privacy_policy_firebase_authentication">Firebase Authentication is provided by Google and is used to create and authenticate users to gain authorized access to their data. Your account login information, email address and password, are stored securely in their system by using encryption. All data can be deleted and modified to keep it up to date. Firebase’s privacy policy here: https://www.firebase.com/terms/privacy-policy.html</string>
    <string name="firebase_storage">Firebase Storage</string>
    <string name="privacy_policy_firebase_storage">Firebase Storage is provided by Google and is used to store images in the application. These currently consist of your profile image and event profile images. The photo is deleted if you change your profile photo or event image. Firebase’s privacy policy here: https://www.firebase.com/terms/privacy-policy.html</string>
    <string name="firebase_realtime_databases">Firebase Realtime Databases</string>
    <string name="privacy_policy_firebase_database">Firebase Realtime Databases is provided by Google and is used to store your profile data, name, job position, company name, industry, notifications, connection requests, connections, and obfuscated location coordinates. Plus, all event data. All data can be deleted and modified to keep it up to date. See Firebase’s privacy policy here: https://www.firebase.com/terms/privacy-policy.html</string>
    <string name="picasso">Picasso</string>
    <string name="privacy_policy_picasso">Picasso is a library used for cropping and formatting an image selected to upload for either an event image or your profile image. Picasso does not save your photos anywhere. See more information on Picasso here: square.github.io/picasso</string>
    <string name="linkedin">LinkedIn</string>
    <string name="privacy_policy_linkedin">The LinkedIn API is used for LinkedIn account creation integration. With your permission, Sync uses LinkedIn profile data (name, email, job position, company name, industry, and profile photo) to ease Sync account creation and keep your Sync profile optionally up to date with your LinkedIn profile data. See LinkedIn’s privacy policy here: https://www.linkedin.com/legal/privacy-policy</string>
    <string name="your_rights">Your Rights</string>
    <string name="data_retention">Data Retention</string>
    <string name="privacy_policy_data_retention">Sync retains your personal data while the account is in existence despite how frequently you may use the application.</string>
    <string name="access_and_control_your_personal_data">Access and Control Your Personal Data</string>
    <string name="privacy_policy_control_personal_data">Sync provides many options for you to determine the collection and accuracy of the information you provide to the system, from editing profile and event data to choosing the level of location privacy you feel most comfortable with. In compliance with GDPR, you may request to see what data has been collected about you by contacting us.</string>
    <string name="account_closure">Account Closure</string>
    <string name="privacy_policy_account_closure">If you choose to close your account, all data about you shall be deleted from the system immediately in compliance with GDPR. All information about your account in other user’s accounts (ex. Profile view notifications, connections, etc.) will be deleted immediately. You can delete your account at any point.</string>
    <string name="privacy_policy_more_info">For further information, contact Sync at info@sync.com</string>
    <string name="profile_image">profile image</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="account_details">Account Details</string>
</resources>