<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:layout_marginTop="@dimen/fragment_top_margin"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="com.example.finalyearproject.hollyboothroyd.sync.Activities.Fragments.EditProfileFragment">

    <LinearLayout
        android:id="@+id/edit_profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/edit_profile_photo_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/add_photo"
            android:contentDescription="@string/profile_image"/>

        <EditText
            android:id="@+id/edit_first_name_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/First_Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_last_name_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/Last_Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_position_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/Position_Text_Hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_company_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/Company_Text_Hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_industry_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/Industry_Text_Hint"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <EditText
            android:id="@+id/edit_email_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edit_password_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edit_reenter_password_text"
            style="@style/RoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/entry_side_margin"
            android:layout_marginStart="@dimen/entry_side_margin"
            android:layout_marginTop="@dimen/entry_top_margin"
            android:ems="10"
            android:hint="@string/re_enter_new_password"
            android:inputType="textPassword"/>

        <!-- stretching frame layout, using layout_weight -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- content fixated to the bottom of the screen -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/edit_profile_commit_button"
                style="@style/PrimaryButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/commit_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
